--- a/src/TutorialBethanysPieShop/Views/Pie/List.cshtml
+++ b/src/TutorialBethanysPieShop/Views/Pie/List.cshtml
@@ -1,6 +1,5 @@
-﻿@model IEnumerable<TutorialBethanysPieShop.Models.Pie>
+﻿@model TutorialBethanysPieShop.ViewModel.PiesListViewModel
 
-<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,7 +8,8 @@
     <title>Bethany's Pie Shop</title>
 </head>
 <body>
-    @foreach (var pie in Model)
+    <h1>@Model.CurrentCategory</h1>
+    @foreach (var pie in Model.Pies)
     {
         <div>
             <h2>@pie.Name</h2>
