demo: Creating a Custom TagHelper for the Contact Page
module 6.8

--- a/src/TutorialBethanysPieShop/Views/_ViewImports.cshtml
+++ b/src/TutorialBethanysPieShop/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TutorialBethanysPieShop.Models
 @using TutorialBethanysPieShop.ViewModels
 
+@addTagHelper TutorialBethanysPieShop.TagHelpers.*, TutorialBethanysPieShop
