demo: Adding Navigation and Routes
module 7.3

--- a/src/TutorialBethanysPieShop/Views/_ViewImports.cshtml
+++ b/src/TutorialBethanysPieShop/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using TutorialBethanysPieShop.ViewModels
 
 @addTagHelper TutorialBethanysPieShop.TagHelpers.*, TutorialBethanysPieShop
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
