--- a/src/TutorialBethanysPieShop/Views/Shared/_Layout.cshtml
+++ b/src/TutorialBethanysPieShop/Views/Shared/_Layout.cshtml
@@ -29,6 +29,15 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="navbar navbar-nav">
+                    <li>
+                        <a asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    @await Component.InvokeAsync("CategoryMenu")
+                    <li>
+                        <a asp-controller="Contact" asp-action="Index">
+                            Contact us
+                        </a>
+                    </li>
                     @await Component.InvokeAsync("ShoppingCartSummary")
                 </ul>
             </div>
